# bowtie

./: .gitignore  README.md  bowtie.cabal  stack.yaml
src/: Algos.hs  Main.hs  Utils.hs  Version.hs
