name:                bowtie
version:             0.1.0.0
synopsis:            MTIE and TDEV analysis
description:         bowtie ⋈ — a program to perform analysis on Time Interval Error (TIE)
homepage:            https://github.com/philippedev101/bowtie
license:             AGPLv3
license-file:        LICENSE
author:              philippedev101
maintainer:          philippedev101@gmail.com
copyright:           2017 philippedev101
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable bowtie
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Algos, Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , ansi-wl-pprint
                     , directory
                     , text
                     , binary-conduit
                     , double-conversion
                     , bytestring-show
                     , conduit
                     , conduit-extra
                     , data-binary-ieee754
                     , extra
                     , mtl
                     , resourcet
                     , optparse-applicative
                     , foldl
                     , attoparsec
                     , bytestring


